#ifndef MAIN_H
#define MAIN_H

/* Include Files */
#include "rtwtypes.h"
#include <stddef.h>
#include <stdlib.h>


#ifdef __cplusplus
extern "C" {
#endif

/* Function Declarations */
extern int main(int argc, char **argv);

extern void main_svm_speech_30(void);

#ifdef __cplusplus
}
#endif

#endif

